# manas-assistant

./: .gitignore  TODO.md  data_schema.md  pyproject.toml
backup/: main.py
src/contexts/assignments/application/ports/: outbound.py
src/contexts/assignments/domain/: events.py
src/contexts/attendance/domain/: events.py
src/contexts/documents/application/ports/: outbound.py
src/contexts/documents/domain/: entities.py
src/contexts/exams/application/ports/: outbound.py
src/contexts/exams/domain/: entities.py  events.py
src/contexts/identity/: CONTEXT.py
src/contexts/identity/domain/: events.py
src/contexts/timetable/domain/: entities.py  errors.py  events.py  services.py  value_objects.py
src/infrastructure/config/: settings.py
src/infrastructure/wiring/: _assignments.py  _attendance.py  _cafeteria.py  _credits.py  _documents.py  _exams.py  _grades.py  _identity.py  _shared.py  _timetable.py  container.py
src/shared_kernel/domain/: events.py  identity.py
src/shared_kernel/ports/: event_bus.py  notification.py  system.py
tests/contexts/timetable/unit/: test_domain_services.py
tests/shared/fakes/: infrastructure.py
