[project]
name = "out-of-department-courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "pytest>=9.0.2",
]
